--- a/project-board/src/main/resources/application.yaml
+++ b/project-board/src/main/resources/application.yaml
@@ -13,9 +13,13 @@ spring:
     # username: himmel
     # password: Gksmf18!
     # driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:h2:mem:testdb
-    username: sa
-    driver-class-name: org.h2.Driver
+    url: jdbc:mysql://localhost:3306/board
+    username: root
+    password: Gksmf18!
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    # url: jdbc:h2:mem:testdb
+    # username: sa
+    # driver-class-name: org.h2.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
