Querydsl 지원을 이용하여 api 검색 옵션 추가

--- a/project-board/.gitignore
+++ b/project-board/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,eclipse,visualstudiocode,windows,macos,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,gradle,intellij+all,eclipse,visualstudiocode,windows,macos,linux
 
+### Querysdsl
+/src/main/generated
+
 ### Eclipse ###
 .metadata
 bin/
