--- a/project-board/src/main/resources/application.yaml
+++ b/project-board/src/main/resources/application.yaml
@@ -11,15 +11,15 @@ spring:
   datasource:
     # url: jdbc:h2:mem:testdb
     # username: sa
-    # driverClassName: org.h2.Driver
-    url: jdbc:mysql://localhost:3306/board
-    username: himmel
-    password: Gksmf18!
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    # # driverClassName: org.h2.Driver
     # url: jdbc:mysql://localhost:3306/board
-    # username: root
+    # username: himmel
     # password: Gksmf18!
     # driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/board
+    username: root
+    password: Gksmf18!
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
