--- a/project-board/src/main/resources/application.yaml
+++ b/project-board/src/main/resources/application.yaml
@@ -12,14 +12,14 @@ spring:
     # url: jdbc:h2:mem:testdb
     # username: sa
     # # driverClassName: org.h2.Driver
-    url: jdbc:mysql://localhost:3306/board
-    username: himmel
-    password: Gksmf18!
-    driver-class-name: com.mysql.cj.jdbc.Driver
     # url: jdbc:mysql://localhost:3306/board
-    # username: root
+    # username: himmel
     # password: Gksmf18!
     # driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/board
+    username: root
+    password: Gksmf18!
+    driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     defer-datasource-initialization: true
     hibernate.ddl-auto: create
