--- a/project-board/.gitignore
+++ b/project-board/.gitignore
@@ -307,3 +307,5 @@ gradle-app.setting
 .classpath
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,intellij+all,eclipse,visualstudiocode,windows,macos,linux
+
+.DS_Store
